--- a/ref.bib
+++ b/ref.bib
@@ -13,5 +13,5 @@
   title={Food balance sheets: A handbook},
   author={FAO},
   year={2001},
-  publisher={Food and Agriculture Organisation of the United Nations}
+  publisher={Food \& Agriculture Organisation of the United Nations}
 }
